@@ -45,7 +45,6 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.PrintStream;
 import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
@@ -80,25 +79,23 @@ import javax.swing.text.SimpleAttributeSet;
 import javax.swing.text.StyleConstants;
 import javax.swing.text.StyledDocument;
 import static com.tonikelope.coronapoker.InGameNotifyDialog.NOTIFICATION_TIMEOUT;
-import java.io.FileOutputStream;
-import java.util.logging.FileHandler;
-import java.util.logging.Handler;
-import java.util.logging.SimpleFormatter;
+import java.lang.management.ManagementFactory;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 /**
  *
  * @author tonikelope
  */
 public class Init extends JFrame {
-
+    
     public static final boolean DEV_MODE = false;
-
-    public static final boolean DEBUG_FILE = true;
-
     public static final String CORONA_DIR = System.getProperty("user.home") + "/.coronapoker";
     public static final String LOGS_DIR = CORONA_DIR + "/Logs";
     public static final String RADAR_DIR = CORONA_DIR + "/RADAR";
     public static final String DEBUG_DIR = CORONA_DIR + "/Debug";
+    public static final String PANOPTES_DIR = CORONA_DIR + "/Panoptes";
     public static final String GIFSICLE_DIR = CORONA_DIR + "/gifsicle";
     public static final String SETDPI_DIR = CORONA_DIR + "/setdpi";
     public static final String CACHE_DIR = CORONA_DIR + "/Cache";
@@ -114,11 +111,8 @@ public class Init extends JFrame {
     public static volatile String WINDOW_TITLE = "CoronaPoker " + AboutDialog.VERSION;
     public static volatile ConcurrentHashMap<String, Object> MOD = null;
     public static volatile Connection SQLITE = null;
-    public static volatile boolean INIT = false;
     public static volatile Boolean ANTI_SCREENSAVER_KEY_PRESSED = false;
     public static volatile Init VENTANA_INICIO = null;
-    public static volatile Method CORONA_HMAC_J1 = null;
-    public static volatile Method CORONA_HMAC_VM = null;
     public static volatile Method M1 = null;
     public static volatile Method M2 = null;
     public static volatile Image I1 = null;
@@ -131,105 +125,98 @@ public class Init extends JFrame {
     private volatile Timer quote_timer = null;
     private volatile int conta_quote = 0;
     private volatile JTextPane quote = null;
-
+    
     static {
-
+        System.out.println(System.getProperty("os.name"));
+        
         System.setProperty("sun.java2d.uiScale", "1");
-
-        if (Init.DEBUG_FILE) {
-            try {
-                String debugFile = Init.DEBUG_DIR + "/CORONAPOKER_DEBUG_" + Helpers.getFechaHoraActual("dd_MM_yyyy__HH_mm_ss") + ".log";
-
-                PrintStream fileOut = new PrintStream(new FileOutputStream(debugFile), true);
-                System.setOut(fileOut);
-                System.setErr(fileOut);
-
-                Logger rootLogger = Logger.getLogger("");
-                for (Handler h : rootLogger.getHandlers()) {
-                    rootLogger.removeHandler(h);
-                }
-                FileHandler fh = new FileHandler(debugFile, true);
-                fh.setFormatter(new SimpleFormatter());
-                rootLogger.addHandler(fh);
-
-                System.out.println("Debug iniciado correctamente.");
-
-            } catch (IOException ex1) {
-                ex1.printStackTrace();
-            }
-        }
-
-        try {
-            CORONA_HMAC_J1 = Class.forName("com.tonikelope.coronahmac.M").getMethod("J1", new Class<?>[]{byte[].class, byte[].class});
-            CORONA_HMAC_VM = Class.forName("com.tonikelope.coronahmac.M").getMethod("VM", new Class<?>[]{});
-        } catch (Exception ex) {
-
-            Logger.getLogger(Init.class.getName()).log(Level.WARNING, "CoronaHMAC is not present!");
-        }
-
-        Logger.getLogger(Init.class.getName()).log(Level.INFO, System.getProperty("os.name"));
-
+        
         if (Helpers.OSValidator.isUnix()) {
             System.setProperty("sun.java2d.opengl", "true");
             System.setProperty("sun.java2d.d3d", "false");
         }
-
+        
         try {
-
+            
             M1 = Class.forName("com.tonikelope.coronapoker.Huevos").getMethod("M1", new Class<?>[]{JDialog.class, String.class});
-
+            
             M2 = Class.forName("com.tonikelope.coronapoker.Huevos").getMethod("M2", new Class<?>[]{String.class});
-
+            
             try {
-
+                
                 I1 = ImageIO.read(new ByteArrayInputStream((byte[]) M2.invoke(null, "d")));
-
+                
             } catch (Exception ex) {
-
+                
                 Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
             }
-
+            
         } catch (Exception ex) {
             Logger.getLogger(Init.class.getName()).log(Level.WARNING, "Huevos is not present!");
         }
-
+        
     }
-
+    
     public JLabel getBaraja_fondo() {
         return baraja_fondo;
     }
-
-    public static boolean coronaHMACVM() {
-
-        if (CORONA_HMAC_VM != null) {
-            try {
-                return (boolean) CORONA_HMAC_VM.invoke(null);
-            } catch (Exception ex) {
-                Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
-            }
-        }
-
-        return false;
-    }
-
-    public static String coronaHMACJ1(byte[] a, byte[] b) {
-
-        if (CORONA_HMAC_J1 != null) {
-
-            try {
-                return (String) CORONA_HMAC_J1.invoke(null, a, b);
-            } catch (Exception ex) {
-                Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
-            }
-        }
-
-        return "MjEvMTIvMTk4NA==";
-    }
-
+    
     public JLabel getUpdate_label() {
         return update_label;
     }
+    
+    public static void setupConsoleLogger() {
+        try {
+            // Define the path for the debug log file (append mode = true)
+            java.io.File logFile = new java.io.File(DEBUG_DIR + "/coronapoker_debug_" + Helpers.genRandomString(10) + ".log");
+            java.io.FileOutputStream fileOut = new java.io.FileOutputStream(logFile, true);
 
+            // [!] FIX: Obligamos al archivo a guardarse en formato UTF-8 puro
+            java.io.PrintStream filePrintStream = new java.io.PrintStream(fileOut, true, "UTF-8");
+
+            // [!] FIX: Obligamos a la tubería de System.out a usar UTF-8
+            TeeOutputStream teeOut = new TeeOutputStream(System.out, filePrintStream);
+            java.io.PrintStream outPrintStream = new java.io.PrintStream(teeOut, true, "UTF-8");
+
+            // [!] FIX: Obligamos a la tubería de System.err a usar UTF-8
+            TeeOutputStream teeErr = new TeeOutputStream(System.err, filePrintStream);
+            java.io.PrintStream errPrintStream = new java.io.PrintStream(teeErr, true, "UTF-8");
+
+            // Inject our custom pipes into the JVM
+            System.setOut(outPrintStream);
+            System.setErr(errPrintStream);
+
+            // --- FIX PARA CAPTURAR LOS MENSAJES DE LOS LOGGERS NATIVOS DE JAVA ---
+            java.util.logging.Logger rootLogger = java.util.logging.LogManager.getLogManager().getLogger("");
+
+            // 1. Buscamos y destruimos el handler antiguo
+            for (java.util.logging.Handler handler : rootLogger.getHandlers()) {
+                if (handler instanceof java.util.logging.ConsoleHandler) {
+                    rootLogger.removeHandler(handler);
+                }
+            }
+
+            // 2. Creamos uno nuevo y le forzamos la codificación UTF-8
+            java.util.logging.ConsoleHandler newConsoleHandler = new java.util.logging.ConsoleHandler();
+            try {
+                newConsoleHandler.setEncoding("UTF-8");
+            } catch (Exception encodingEx) {
+                // Si falla el setEncoding, ignoramos, usará el default
+            }
+            rootLogger.addHandler(newConsoleHandler);
+            // ----------------------------------------------------------------------
+
+            // Print a header to mark a new session in the log file
+            System.out.println("\n============================================================================");
+            System.out.println("=== NEW CORONAPOKER SESSION STARTED: " + java.time.LocalDateTime.now() + " ===");
+            System.out.println("============================================================================\n");
+            
+        } catch (Exception e) {
+            System.err.println("Could not initialize file logger!");
+            e.printStackTrace();
+        }
+    }
+    
     private void printQuote() {
         Helpers.threadRun(() -> {
             if (conta_quote % Helpers.POKER_QUOTES_ES.size() == 0) {
@@ -246,106 +233,112 @@ public class Init extends JFrame {
                 }
             });
         });
-
+        
     }
 
     /**
      * Creates new form Inicio
      */
     public Init() {
-
+        
         initComponents();
-
+        
         setTitle(Init.WINDOW_TITLE);
-
+        
         quote = new JTextPane();
-
+        
         StyledDocument doc = quote.getStyledDocument();
-
+        
         SimpleAttributeSet center = new SimpleAttributeSet();
-
+        
         StyleConstants.setAlignment(center, StyleConstants.ALIGN_CENTER);
-
+        
         doc.setParagraphAttributes(0, doc.getLength(), center, false);
-
+        
         quote.setEditable(false);
-
+        
         quote.setOpaque(false);
-
+        
         quote.setBackground(new Color(0, 0, 0, 0));
-
+        
         quote.setForeground(Color.white);
-
+        
         Font font = new Font("Dialog", Font.ITALIC, 18);
-
+        
         quote.setFont(font);
-
+        
         quote.setVisible(false);
-
+        
         tapete.add(quote, JLayeredPane.POPUP_LAYER);
-
+        
         addComponentListener(new ComponentResizeEndListener() {
             @Override
             public void resizeTimedOut() {
-
+                
                 if (Init.VENTANA_INICIO.isVisible()) {
                     if (Init.VENTANA_INICIO.getWidth() <= 1920 || Init.VENTANA_INICIO.getHeight() <= 1080 - 150) {
-
+                        
                         int new_w = Init.VENTANA_INICIO.getWidth();
-
+                        
                         int new_h = Math.round(1080 * new_w / 1920);
-
+                        
                         if (new_h > Init.VENTANA_INICIO.getHeight() - 150) {
                             new_h = Init.VENTANA_INICIO.getHeight() - 150;
-
+                            
                             new_w = Math.round(1920 * new_h / 1080);
                         }
-
+                        
                         Helpers.setScaledIconLabel(Init.VENTANA_INICIO.getBaraja_fondo(), CORONA_INIT_MOD_IMAGE != null ? CORONA_INIT_MOD_IMAGE : getClass().getResource(CORONA_INIT_IMAGE), Math.round(new_w * 0.9f), Math.round(new_h * 0.9f));
                     } else {
                         Helpers.setScaledIconLabel(Init.VENTANA_INICIO.getBaraja_fondo(), CORONA_INIT_MOD_IMAGE != null ? CORONA_INIT_MOD_IMAGE : getClass().getResource(CORONA_INIT_IMAGE), Math.round(1920 * 0.9f), Math.round(1080 * 0.9f));
                     }
-
+                    
                     quote.setSize((int) getWidth(), 150);
                     quote.setLocation(0, Init.VENTANA_INICIO.getHeight() - 125);
                     quote.setVisible(true);
-
+                    
                     quote.revalidate();
                     quote.repaint();
                 }
             }
         });
-
+        
         if (GameFrame.LANGUAGE.equals(GameFrame.DEFAULT_LANGUAGE)) {
             language_combobox.setSelectedIndex(0);
         } else {
             language_combobox.setSelectedIndex(1);
         }
-
+        
         create_button.setBackground(Color.WHITE);
-
+        
         join_button.setBackground(Color.WHITE);
-
+        
         update_label.setVisible(false);
-
+        
         update_button.setVisible(false);
-
+        
         update_button.setIcon(new ImageIcon(getClass().getResource("/images/update.png")));
-
+        
         update_label.setIcon(new ImageIcon(getClass().getResource("/images/gears.gif")));
-
+        
         HashMap<KeyStroke, Action> actionMap = new HashMap<>();
-
+        
         actionMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_P, KeyEvent.CTRL_DOWN_MASK), new AbstractAction("SCREENSHOT") {
             @Override
             public void actionPerformed(ActionEvent e) {
-
+                
                 if (GameFrame.getInstance() != null) {
-
+                    
                     Audio.playWavResource("misc/screenshot.wav");
-
+                    
                     Helpers.threadRun(() -> {
-                        Helpers.screenshot(new Rectangle(GameFrame.getInstance().getTapete().getLocationOnScreen(), GameFrame.getInstance().getTapete().getSize()), null);
+                        
+                        if (Helpers.OSValidator.isWindows()) {
+                            Helpers.screenshotWindows();
+                        } else {
+                            Helpers.screenshot(new Rectangle(GameFrame.getInstance().getTapete().getLocationOnScreen(), GameFrame.getInstance().getTapete().getSize()), null);
+                        }
+                        
                         Helpers.GUIRun(() -> {
                             InGameNotifyDialog dialog = new InGameNotifyDialog(GameFrame.getInstance(), false, "CAPTURA OK", Color.WHITE, Color.BLACK, getClass().getResource("/images/screenshot.png"), NOTIFICATION_TIMEOUT);
                             dialog.setLocation(dialog.getParent().getLocation());
@@ -353,14 +346,14 @@ public class Init extends JFrame {
                         });
                     });
                 }
-
+                
             }
         });
-
+        
         actionMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_S, KeyEvent.ALT_DOWN_MASK), new AbstractAction("SOUND-SWITCH") {
             @Override
             public void actionPerformed(ActionEvent e) {
-
+                
                 if (GameFrame.getInstance() != null) {
                     GameFrame.getInstance().getSonidos_menu().doClick();
                 } else if (VENTANA_INICIO.isVisible()) {
@@ -370,19 +363,19 @@ public class Init extends JFrame {
                 }
             }
         });
-
+        
         actionMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_DOWN, KeyEvent.SHIFT_DOWN_MASK), new AbstractAction("VOLUME-DOWN") {
             @Override
             public void actionPerformed(ActionEvent e) {
                 if (Audio.MASTER_VOLUME > 0f) {
                     Audio.MASTER_VOLUME = Helpers.floatClean(Audio.MASTER_VOLUME - 0.01f, 2);
-
+                    
                     if (Audio.VOLUME_TIMER.isRunning()) {
                         Audio.VOLUME_TIMER.restart();
                     } else {
                         Audio.VOLUME_TIMER.start();
                     }
-
+                    
                     if (!GameFrame.SONIDOS) {
                         if (GameFrame.getInstance() != null) {
                             GameFrame.getInstance().getSonidos_menu().doClick();
@@ -393,15 +386,15 @@ public class Init extends JFrame {
                         }
                     }
                 }
-
+                
                 if (VOLUME_DIALOG != null) {
                     VOLUME_DIALOG.refresh();
                 } else {
-
+                    
                     if (!CURRENT_MODAL_DIALOG.isEmpty()) {
                         VOLUME_DIALOG = new VolumeControlDialog(CURRENT_MODAL_DIALOG.peekLast(), false, Math.round(0.5f * (GameFrame.getInstance() != null ? GameFrame.getInstance().getWidth() : VENTANA_INICIO.getWidth())));
                     } else {
-
+                        
                         VOLUME_DIALOG = new VolumeControlDialog(GameFrame.getInstance() != null ? GameFrame.getInstance() : (VENTANA_INICIO.isVisible() ? VENTANA_INICIO : WaitingRoomFrame.getInstance()), false, Math.round(0.5f * (GameFrame.getInstance() != null ? GameFrame.getInstance().getWidth() : VENTANA_INICIO.getWidth())));
                     }
                     VOLUME_DIALOG.setLocationRelativeTo(GameFrame.getInstance() != null ? GameFrame.getInstance() : (VENTANA_INICIO.isVisible() ? VENTANA_INICIO : WaitingRoomFrame.getInstance()));
@@ -409,11 +402,11 @@ public class Init extends JFrame {
                 }
             }
         });
-
+        
         actionMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_UP, KeyEvent.SHIFT_DOWN_MASK), new AbstractAction("VOLUME-UP") {
             @Override
             public void actionPerformed(ActionEvent e) {
-
+                
                 if (!GameFrame.SONIDOS) {
                     if (GameFrame.getInstance() != null) {
                         GameFrame.getInstance().getSonidos_menu().doClick();
@@ -423,54 +416,54 @@ public class Init extends JFrame {
                         WaitingRoomFrame.getInstance().soundIconClick();
                     }
                 }
-
+                
                 if (Audio.MASTER_VOLUME < 1.0f) {
                     Audio.MASTER_VOLUME = Helpers.floatClean(Audio.MASTER_VOLUME + 0.01f, 2);
-
+                    
                     if (Audio.VOLUME_TIMER.isRunning()) {
                         Audio.VOLUME_TIMER.restart();
                     } else {
                         Audio.VOLUME_TIMER.start();
                     }
                 }
-
+                
                 if (VOLUME_DIALOG != null) {
                     VOLUME_DIALOG.refresh();
                 } else {
-
+                    
                     if (!CURRENT_MODAL_DIALOG.isEmpty()) {
                         VOLUME_DIALOG = new VolumeControlDialog(CURRENT_MODAL_DIALOG.peekLast(), false, Math.round(0.5f * (GameFrame.getInstance() != null ? GameFrame.getInstance().getWidth() : VENTANA_INICIO.getWidth())));
                     } else {
-
+                        
                         VOLUME_DIALOG = new VolumeControlDialog(GameFrame.getInstance() != null ? GameFrame.getInstance() : (VENTANA_INICIO.isVisible() ? VENTANA_INICIO : WaitingRoomFrame.getInstance()), false, Math.round(0.5f * (GameFrame.getInstance() != null ? GameFrame.getInstance().getWidth() : VENTANA_INICIO.getWidth())));
                     }
                     VOLUME_DIALOG.setLocationRelativeTo(GameFrame.getInstance() != null ? GameFrame.getInstance() : (VENTANA_INICIO.isVisible() ? VENTANA_INICIO : WaitingRoomFrame.getInstance()));
                     VOLUME_DIALOG.refresh();
                 }
-
+                
             }
         });
-
+        
         actionMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_ESCAPE, KeyEvent.CTRL_DOWN_MASK | KeyEvent.ALT_DOWN_MASK), new AbstractAction("FORCE_EXIT") {
             @Override
             public void actionPerformed(ActionEvent e) {
-
+                
                 if (!FORCE_CLOSE_DIALOG) {
-
+                    
                     FORCE_CLOSE_DIALOG = true;
-
+                    
                     if (Helpers.mostrarMensajeInformativoSINO(VENTANA_INICIO, "¿FORZAR CIERRE?", new ImageIcon(Init.class.getResource("/images/exit.png"))) == 0) {
-
+                        
                         System.exit(1);
                     }
-
+                    
                     FORCE_CLOSE_DIALOG = false;
                 }
             }
         });
-
+        
         KeyboardFocusManager kfm = KeyboardFocusManager.getCurrentKeyboardFocusManager();
-
+        
         kfm.addKeyEventDispatcher((KeyEvent e) -> {
             KeyStroke keyStroke = KeyStroke.getKeyStrokeForEvent(e);
             if (actionMap.containsKey(keyStroke)) {
@@ -483,64 +476,64 @@ public class Init extends JFrame {
             }
             return false;
         });
-
+        
         quote_timer = new Timer(QUOTE_DELAY, (ActionEvent ae) -> {
             printQuote();
         });
-
+        
         quote_timer.setInitialDelay(0);
-
+        
         Helpers.setScaledIconLabel(baraja_fondo, CORONA_INIT_MOD_IMAGE != null ? CORONA_INIT_MOD_IMAGE : getClass().getResource(CORONA_INIT_IMAGE), Math.round(1920 * 0.9f), Math.round(1080 * 0.9f));
-
+        
         Helpers.setScaledIconLabel(sound_icon, getClass().getResource(GameFrame.SONIDOS ? "/images/sound_b.png" : "/images/mute_b.png"), 30, 30);
-
+        
         Helpers.updateFonts(this, Helpers.GUI_FONT, null);
-
+        
         Helpers.translateComponents(this, false);
-
+        
         Helpers.setScaledIconButton(stats_button, getClass().getResource("/images/stats.png"), stats_button.getHeight(), stats_button.getHeight());
-
+        
         revalidate();
-
+        
         repaint();
-
+        
     }
-
+    
     public InitPanel getTapete() {
         return tapete;
     }
-
+    
     public void translateGlobalLabels() {
         LocalPlayer.ACTIONS_LABELS = GameFrame.LANGUAGE.equals("es") ? LocalPlayer.ACTIONS_LABELS_ES : LocalPlayer.ACTIONS_LABELS_EN;
         LocalPlayer.POSITIONS_LABELS = GameFrame.LANGUAGE.equals("es") ? LocalPlayer.POSITIONS_LABELS_ES : LocalPlayer.POSITIONS_LABELS_EN;
         RemotePlayer.ACTIONS_LABELS = GameFrame.LANGUAGE.equals("es") ? RemotePlayer.ACTIONS_LABELS_ES : RemotePlayer.ACTIONS_LABELS_EN;
         RemotePlayer.POSITIONS_LABELS = GameFrame.LANGUAGE.equals("es") ? RemotePlayer.POSITIONS_LABELS_ES : RemotePlayer.POSITIONS_LABELS_EN;
         Hand.NOMBRES_JUGADAS = GameFrame.LANGUAGE.equals("es") ? Hand.NOMBRES_JUGADAS_ES : Hand.NOMBRES_JUGADAS_EN;
-
+        
     }
-
+    
     public void continueLastGame(boolean local) {
-
+        
         NewGameDialog dialog = new NewGameDialog(this, true, local);
-
+        
         if (GameFrame.PASSWORD_RECOVER != null) {
             dialog.setPass(GameFrame.PASSWORD_RECOVER);
         }
-
+        
         dialog.setForce_recover(true);
-
+        
         if (local) {
             dialog.getRecover_checkbox().doClick();
         }
-
+        
         dialog.setLocationRelativeTo(dialog.getParent());
-
+        
         dialog.setEnabled(false);
-
+        
         dialog.setVisible(true);
-
+        
         setEnabled(true);
-
+        
         if (!dialog.isDialog_ok()) {
             setVisible(true);
             GameFrame.IWTSTH_RULE_RECOVER = null;
@@ -864,48 +857,48 @@ public class Init extends JFrame {
         // TODO add your handling code here:
 
         GameFrame.SONIDOS = !GameFrame.SONIDOS;
-
+        
         Helpers.PROPERTIES.setProperty("sonidos", GameFrame.SONIDOS ? "true" : "false");
-
+        
         Helpers.savePropertiesFile();
-
+        
         Helpers.GUIRun(() -> {
             Helpers.setScaledIconLabel(sound_icon, getClass().getResource(GameFrame.SONIDOS ? "/images/sound_b.png" : "/images/mute_b.png"), 30, 30);
         });
-
+        
         if (!GameFrame.SONIDOS) {
-
+            
             Audio.muteAll();
-
+            
         } else {
-
+            
             Audio.unmuteAll();
-
+            
         }
     }//GEN-LAST:event_sound_iconMouseClicked
-
+    
     private void language_comboboxActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_language_comboboxActionPerformed
         // TODO add your handling code here:
         if (VENTANA_INICIO != null) {
-
+            
             GameFrame.LANGUAGE = language_combobox.getSelectedIndex() == 0 ? "es" : "en";
-
+            
             Helpers.PROPERTIES.setProperty("lenguaje", GameFrame.LANGUAGE);
-
+            
             Helpers.savePropertiesFile();
-
+            
             Helpers.translateComponents(this, true);
-
+            
             translateGlobalLabels();
-
+            
             Crupier.loadMODSounds();
-
+            
             Helpers.setCoronaLocale();
-
+            
             printQuote();
         }
     }//GEN-LAST:event_language_comboboxActionPerformed
-
+    
     private void formComponentShown(java.awt.event.ComponentEvent evt) {//GEN-FIRST:event_formComponentShown
         // TODO add your handling code here:
 
@@ -917,296 +910,417 @@ public class Init extends JFrame {
                 quote_timer.start();
             }
         }
-
+        
     }//GEN-LAST:event_formComponentShown
-
+    
     private void update_buttonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_update_buttonActionPerformed
         // TODO add your handling code here:
         UPDATE();
     }//GEN-LAST:event_update_buttonActionPerformed
-
+    
     private void formWindowClosing(java.awt.event.WindowEvent evt) {//GEN-FIRST:event_formWindowClosing
         // TODO add your handling code here:
         Helpers.PROPERTIES.setProperty("master_volume", String.valueOf(Audio.MASTER_VOLUME));
         Helpers.savePropertiesFile();
-
+        
     }//GEN-LAST:event_formWindowClosing
-
+    
     private void formComponentHidden(java.awt.event.ComponentEvent evt) {//GEN-FIRST:event_formComponentHidden
         // TODO add your handling code here:
         if (quote_timer.isRunning()) {
             quote_timer.stop();
         }
     }//GEN-LAST:event_formComponentHidden
-
+    
     private void baraja_fondoMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_baraja_fondoMouseClicked
         // TODO add your handling code here:
 
         if (!botones_panel.getBounds().contains(evt.getX(), evt.getY())) {
-
+            
             AboutDialog dialog = new AboutDialog(this, true);
             dialog.setLocationRelativeTo(this);
             dialog.setVisible(true);
         }
     }//GEN-LAST:event_baraja_fondoMouseClicked
-
+    
     private void exit_buttonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_exit_buttonActionPerformed
         // TODO add your handling code here:
         WindowEvent windowEvent = new WindowEvent(this, WindowEvent.WINDOW_CLOSING);
         processWindowEvent(windowEvent);
     }//GEN-LAST:event_exit_buttonActionPerformed
-
+    
     private void create_buttonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_create_buttonActionPerformed
         // TODO add your handling code here:
 
         NewGameDialog dialog = new NewGameDialog(this, true, true);
-
+        
         dialog.setLocationRelativeTo(dialog.getParent());
-
+        
         dialog.setVisible(true);
-
+        
         if (!dialog.isDialog_ok()) {
             setVisible(true);
         } else {
             setVisible(false);
         }
     }//GEN-LAST:event_create_buttonActionPerformed
-
+    
     private void create_buttonMouseExited(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_create_buttonMouseExited
         // TODO add your handling code here:
         create_button.setForeground(new Color(102, 0, 204));
         create_button.setBackground(Color.WHITE);
     }//GEN-LAST:event_create_buttonMouseExited
-
+    
     private void create_buttonMouseEntered(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_create_buttonMouseEntered
         // TODO add your handling code here:
         create_button.setBackground(new Color(102, 0, 204));
         create_button.setForeground(Color.WHITE);
     }//GEN-LAST:event_create_buttonMouseEntered
-
+    
     private void stats_buttonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_stats_buttonActionPerformed
         // TODO add your handling code here:
         StatsDialog dialog = new StatsDialog(this, true);
-
+        
         dialog.setLocationRelativeTo(this);
-
+        
         dialog.setVisible(true);
     }//GEN-LAST:event_stats_buttonActionPerformed
-
+    
     private void join_buttonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_join_buttonActionPerformed
         // TODO add your handling code here:
 
         NewGameDialog dialog = new NewGameDialog(this, true, false);
-
+        
         dialog.setLocationRelativeTo(dialog.getParent());
-
+        
         dialog.setVisible(true);
-
+        
         if (!dialog.isDialog_ok()) {
             setVisible(true);
         } else {
             setVisible(false);
         }
     }//GEN-LAST:event_join_buttonActionPerformed
-
+    
     private void join_buttonMouseExited(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_join_buttonMouseExited
         // TODO add your handling code here:
         join_button.setForeground(new Color(102, 0, 204));
         join_button.setBackground(Color.WHITE);
     }//GEN-LAST:event_join_buttonMouseExited
-
+    
     private void join_buttonMouseEntered(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_join_buttonMouseEntered
         // TODO add your handling code here:
         join_button.setBackground(new Color(102, 0, 204));
         join_button.setForeground(Color.WHITE);
     }//GEN-LAST:event_join_buttonMouseEntered
+    
+    public static void ensureRequiredJvmParameters(String[] args, Class<?> mainClass) {
+        List<String> jvmArgs = ManagementFactory.getRuntimeMXBean().getInputArguments();
+
+        // 1. Check standard JVM flags safely by iterating
+        boolean hasNativeAccess = false;
+        boolean hasDisableAttach = false;
+        
+        for (String arg : jvmArgs) {
+            if (arg.contains("--enable-native-access=ALL-UNNAMED")) {
+                hasNativeAccess = true;
+            }
+            if (arg.contains("-XX:+DisableAttachMechanism")) {
+                hasDisableAttach = true;
+            }
+        }
+
+        // 2. Check properties directly from the System (ignores shell quote issues)
+        String currentLibPath = System.getProperty("java.library.path");
+        boolean hasLibraryPath = currentLibPath != null && currentLibPath.contains(PANOPTES_DIR);
+
+        // Check if IPv4 stack is explicitly preferred
+        String preferIPv4 = System.getProperty("java.net.preferIPv4Stack");
+        boolean hasIPv4Forced = "true".equals(preferIPv4);
+
+        // 3. If all parameters are present, continue normal execution
+        if (hasNativeAccess && hasLibraryPath && hasDisableAttach && hasIPv4Forced) {
+            return;
+        }
+        
+        System.out.println("Missing required JVM security, library, or network parameters. Restarting automatically...");
+        
+        try {
+            // 4. Build the restart command
+            String javaBin = System.getProperty("java.home") + File.separator + "bin" + File.separator + "java";
+            String classpath = System.getProperty("java.class.path");
+            
+            List<String> command = new ArrayList<>();
+            command.add(javaBin);
+
+            // Inject the required parameters
+            command.add("--enable-native-access=ALL-UNNAMED");
+
+            // [!] CRITICAL FIX: Do not use single quotes here. ProcessBuilder handles spaces natively.
+            command.add("-Djava.library.path=" + PANOPTES_DIR);
+
+            // Force IPv4 Stack
+            command.add("-Djava.net.preferIPv4Stack=true");
+            
+            command.add("-XX:+DisableAttachMechanism");
+
+            // Add classpath and main class
+            command.add("-cp");
+            command.add(classpath);
+            command.add(mainClass.getName());
+
+            // Pass along the original application arguments
+            if (args != null) {
+                command.addAll(Arrays.asList(args));
+            }
+
+            // 5. Configure the new process
+            ProcessBuilder builder = new ProcessBuilder(command);
+
+            // 6. Sanitize the environment variables to prevent silent agent injection
+            Map<String, String> env = builder.environment();
+            env.remove("JAVA_TOOL_OPTIONS");
+            env.remove("_JAVA_OPTIONS");
+            env.remove("JDK_JAVA_OPTIONS");
+
+            // 7. Launch the new process
+            builder.inheritIO();
+            builder.start();
+
+            // 8. Terminate the current flawed instance
+            System.exit(0);
+            
+        } catch (Exception e) {
+            System.err.println("Error while restarting JVM: " + e.getMessage());
+            e.printStackTrace();
+            System.exit(1);
+        }
+    }
 
     /**
      * @param args the command line arguments
      */
     public static void main(String args[]) {
+        
+        ensureRequiredJvmParameters(args, Init.class);
+        
+        setupConsoleLogger();
+        
+        Helpers.threadRun(() -> {
 
-        if (!INIT) {
-
-            INIT = true;
-
-            Helpers.threadRun(() -> {
-
-                //Deadlock detection
-                while (true) {
-                    Helpers.detectAndHandleDeadlocks();
-                    Helpers.pausar(DEADLOCK_DETECT_WAIT);
-                }
-
-            });
-
-            if (GameFrame.TEST_MODE) {
-                GameFrame.CINEMATICAS = false;
+            //Deadlock detection
+            while (true) {
+                Helpers.detectAndHandleDeadlocks();
+                Helpers.pausar(DEADLOCK_DETECT_WAIT);
             }
-
-            if (!Init.DEV_MODE) {
-                SQL_FILE = CORONA_DIR + "/coronapoker.db";
-            } else {
-                if (Files.exists(Paths.get(CORONA_DIR + "/coronapoker.db"))) {
-
-                    try {
-                        File db = File.createTempFile("coronapoker_", ".db");
-                        Files.copy(Paths.get(CORONA_DIR + "/coronapoker.db"), db.toPath(), StandardCopyOption.REPLACE_EXISTING);
-                        SQL_FILE = db.getAbsolutePath();
-                    } catch (IOException ex) {
-                        Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
-                    }
-                }
-            }
-
-            /* Set the Nimbus look and feel */
-            //<editor-fold defaultstate="collapsed" desc=" Look and feel setting code (optional) ">
-            /* If Nimbus (introduced in Java SE 6) is not available, stay with the default look and feel.
-         * For details see http://download.oracle.com/javase/tutorial/uiswing/lookandfeel/plaf.html 
-             */
-            try {
-                for (javax.swing.UIManager.LookAndFeelInfo info : javax.swing.UIManager.getInstalledLookAndFeels()) {
-                    if ("Nimbus".equals(info.getName())) {
-                        javax.swing.UIManager.setLookAndFeel(info.getClassName());
-                        break;
-                    }
-                }
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | javax.swing.UnsupportedLookAndFeelException ex) {
-                Logger.getLogger(Init.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
-            }
-            //</editor-fold>
-
-            EmojiPanel.initClass();
-
-            Helpers.setCoronaLocale();
-
-            Logger.getLogger(Init.class.getName()).log(Level.INFO, "Loading SQLITE DB...");
-
-            Helpers.initSQLITE();
-
-            try {
-                Logger.getLogger(Init.class.getName()).log(Level.INFO, "Trying to load CSPRNG HASH DRBG SHA-512...");
-                Security.setProperty("securerandom.drbg.config", "Hash_DRBG,SHA-512,256,reseed_only");
-                Helpers.CSPRNG_GENERATOR = SecureRandom.getInstance("DRBG");
-                Logger.getLogger(Init.class.getName()).log(Level.INFO, "CSPRNG OK");
-            } catch (NoSuchAlgorithmException ex) {
-
-                Helpers.CSPRNG_GENERATOR = new SecureRandom();
-                Logger.getLogger(Init.class.getName()).log(Level.WARNING, "CSPRNG -> {0}", Helpers.CSPRNG_GENERATOR.getAlgorithm());
-            }
-
-            Helpers.GUI_FONT = Helpers.createAndRegisterFont(Helpers.class.getResourceAsStream("/fonts/McLaren-Regular.ttf"));
-
-            Helpers.updateCoronaDialogsFont();
-
-            Init.MOD = Helpers.loadMOD();
-
-            if (Init.MOD != null) {
-
-                WINDOW_TITLE += " @ " + MOD.get("name") + " " + MOD.get("version");
-
-                PEGI18_MOD = (MOD.containsKey("adults") && (boolean) MOD.get("adults"));
-
-                if ((boolean) MOD.get("init_background")) {
-                    try {
-                        CORONA_INIT_MOD_IMAGE = new File(Helpers.getCurrentJarParentPath() + "/mod/init.png").toURI().toURL();
-                    } catch (MalformedURLException ex) {
-                        Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
-                    }
-                }
-
-                //Cargamos las barajas del MOD
-                for (Map.Entry<String, HashMap> entry : ((HashMap<String, HashMap>) Init.MOD.get("decks")).entrySet()) {
-
-                    HashMap<String, Object> baraja = entry.getValue();
-
-                    Card.BARAJAS.put((String) baraja.get("name"), new Object[]{baraja.get("aspect"), true, baraja.containsKey("sound") ? baraja.get("sound") : null});
-                }
-
-                if (Init.MOD.containsKey("fusion_sounds")) {
-                    Crupier.FUSION_MOD_SOUNDS = (boolean) Init.MOD.get("fusion_sounds");
-                }
-
-                if (Init.MOD.containsKey("fusion_cinematics")) {
-                    Crupier.FUSION_MOD_CINEMATICS = (boolean) Init.MOD.get("fusion_cinematics");
-                }
-
-                Crupier.loadMODSounds();
-
-                Crupier.loadMODCinematicsAllin();
-
-                //Actualizamos la fuente
-                if (Init.MOD.containsKey("font") && Files.exists(Paths.get(Helpers.getCurrentJarParentPath() + "/mod/fonts/" + Init.MOD.get("font")))) {
-
-                    try {
-                        Helpers.GUI_FONT = Helpers.createAndRegisterFont(new FileInputStream(Helpers.getCurrentJarParentPath() + "/mod/fonts/" + Init.MOD.get("font")));
-                    } catch (FileNotFoundException ex) {
-                        Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
-                    }
-                }
-
-            }
-
-            if (!Card.BARAJAS.containsKey(GameFrame.BARAJA)) {
-                GameFrame.BARAJA = GameFrame.BARAJA_DEFAULT;
-            }
-
-            Card.updateCachedImages(1f + GameFrame.ZOOM_LEVEL * GameFrame.getZOOM_STEP(), true);
-
-            Audio.MASTER_VOLUME = Float.parseFloat(Helpers.PROPERTIES.getProperty("master_volume", "0.8"));
-
-            if (!GameFrame.SONIDOS) {
-
-                Audio.muteAll();
-
-            } else {
-
-                Audio.unmuteAll();
-
-            }
-
-            Audio.playWavResource("misc/init.wav");
-
-            Audio.playLoopMp3Resource("misc/background_music.mp3");
-
-            Logger.getLogger(Init.class.getName()).log(Level.INFO, "Loading INIT WINDOW...");
-
-            Helpers.GUIRun(() -> {
-                VENTANA_INICIO = new Init();
-
-                VENTANA_INICIO.setExtendedState(JFrame.MAXIMIZED_BOTH);
-
-                VENTANA_INICIO.setVisible(true);
-            });
-
-            if (PEGI18_MOD && !Files.isReadable(Paths.get(Helpers.getCurrentJarParentPath() + "/mod/.pegi18_warning"))) {
-
-                if (Helpers.mostrarMensajeInformativoSINO(VENTANA_INICIO, "EL MOD CARGADO CONTIENE MATERIAL CALIFICADO SÓLO PARA MAYORES DE 18 AÑOS. ¿Continuar?", new ImageIcon(Init.class.getResource("/images/pegi18.png"))) == 0) {
-                    try {
-                        Files.createFile(Paths.get(Helpers.getCurrentJarParentPath() + "/mod/.pegi18_warning"));
-                    } catch (IOException ex) {
-                        Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
-                    }
-                } else {
-
-                    System.exit(0);
-                }
-            }
-
-            Logger.getLogger(Init.class.getName()).log(Level.INFO, "CHECKING UPDATE...");
-
-            UPDATE();
-
-            if (!Helpers.OSValidator.isMac()) {
-                antiScreensaver();
-            }
-
-            Logger.getLogger(Init.class.getName()).log(Level.INFO, "LET'S GO");
+            
+        });
+        
+        if (GameFrame.TEST_MODE) {
+            GameFrame.CINEMATICAS = false;
         }
+        
+        if (!Init.DEV_MODE) {
+            SQL_FILE = CORONA_DIR + "/coronapoker.db";
+        } else {
+            if (Files.exists(Paths.get(CORONA_DIR + "/coronapoker.db"))) {
+                
+                try {
+                    File db = File.createTempFile("coronapoker_", ".db");
+                    Files.copy(Paths.get(CORONA_DIR + "/coronapoker.db"), db.toPath(), StandardCopyOption.REPLACE_EXISTING);
+                    SQL_FILE = db.getAbsolutePath();
+                } catch (IOException ex) {
+                    Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
+                }
+            }
+        }
+
+        /* Set the Nimbus look and feel */
+        //<editor-fold defaultstate="collapsed" desc=" Look and feel setting code (optional) ">
+        /* If Nimbus (introduced in Java SE 6) is not available, stay with the default look and feel.
+         * For details see http://download.oracle.com/javase/tutorial/uiswing/lookandfeel/plaf.html 
+         */
+        try {
+            for (javax.swing.UIManager.LookAndFeelInfo info : javax.swing.UIManager.getInstalledLookAndFeels()) {
+                if ("Nimbus".equals(info.getName())) {
+                    javax.swing.UIManager.setLookAndFeel(info.getClassName());
+                    break;
+                }
+            }
+        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | javax.swing.UnsupportedLookAndFeelException ex) {
+            Logger.getLogger(Init.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
+        }
+        //</editor-fold>
+
+        EmojiPanel.initClass();
+        
+        Helpers.setCoronaLocale();
+        
+        Logger.getLogger(Init.class.getName()).log(Level.INFO, "Loading SQLITE DB...");
+        
+        Helpers.initSQLITE();
+        
+        try {
+            Logger.getLogger(Init.class.getName()).log(Level.INFO, "Trying to load CSPRNG HASH DRBG SHA-512...");
+            Security.setProperty("securerandom.drbg.config", "Hash_DRBG,SHA-512,256,reseed_only");
+            Helpers.CSPRNG_GENERATOR = SecureRandom.getInstance("DRBG");
+            Logger.getLogger(Init.class.getName()).log(Level.INFO, "CSPRNG OK");
+        } catch (NoSuchAlgorithmException ex) {
+            
+            Helpers.CSPRNG_GENERATOR = new SecureRandom();
+            Logger.getLogger(Init.class.getName()).log(Level.WARNING, "CSPRNG -> {0}", Helpers.CSPRNG_GENERATOR.getAlgorithm());
+        }
+        
+        Helpers.GUI_FONT = Helpers.createAndRegisterFont(Helpers.class.getResourceAsStream("/fonts/McLaren-Regular.ttf"));
+        
+        Helpers.updateCoronaDialogsFont();
+        
+        Init.MOD = Helpers.loadMOD();
+        
+        if (Init.MOD != null) {
+            
+            WINDOW_TITLE += " @ " + MOD.get("name") + " " + MOD.get("version");
+            
+            PEGI18_MOD = (MOD.containsKey("adults") && (boolean) MOD.get("adults"));
+            
+            if ((boolean) MOD.get("init_background")) {
+                try {
+                    CORONA_INIT_MOD_IMAGE = new File(Helpers.getCurrentJarParentPath() + "/mod/init.png").toURI().toURL();
+                } catch (MalformedURLException ex) {
+                    Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
+                }
+            }
+
+            //Cargamos las barajas del MOD
+            for (Map.Entry<String, HashMap> entry : ((HashMap<String, HashMap>) Init.MOD.get("decks")).entrySet()) {
+                
+                HashMap<String, Object> baraja = entry.getValue();
+                
+                Card.BARAJAS.put((String) baraja.get("name"), new Object[]{baraja.get("aspect"), true, baraja.containsKey("sound") ? baraja.get("sound") : null});
+            }
+            
+            if (Init.MOD.containsKey("fusion_sounds")) {
+                Crupier.FUSION_MOD_SOUNDS = (boolean) Init.MOD.get("fusion_sounds");
+            }
+            
+            if (Init.MOD.containsKey("fusion_cinematics")) {
+                Crupier.FUSION_MOD_CINEMATICS = (boolean) Init.MOD.get("fusion_cinematics");
+            }
+            
+            Crupier.loadMODSounds();
+            
+            Crupier.loadMODCinematicsAllin();
+
+            //Actualizamos la fuente
+            if (Init.MOD.containsKey("font") && Files.exists(Paths.get(Helpers.getCurrentJarParentPath() + "/mod/fonts/" + Init.MOD.get("font")))) {
+                
+                try {
+                    Helpers.GUI_FONT = Helpers.createAndRegisterFont(new FileInputStream(Helpers.getCurrentJarParentPath() + "/mod/fonts/" + Init.MOD.get("font")));
+                } catch (FileNotFoundException ex) {
+                    Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
+                }
+            }
+            
+        }
+        
+        if (!Card.BARAJAS.containsKey(GameFrame.BARAJA)) {
+            GameFrame.BARAJA = GameFrame.BARAJA_DEFAULT;
+        }
+        
+        Card.updateCachedImages(1f + GameFrame.ZOOM_LEVEL * GameFrame.getZOOM_STEP(), true);
+        
+        Audio.MASTER_VOLUME = Float.parseFloat(Helpers.PROPERTIES.getProperty("master_volume", "0.8"));
+        
+        if (!GameFrame.SONIDOS) {
+            
+            Audio.muteAll();
+            
+        } else {
+            
+            Audio.unmuteAll();
+            
+        }
+        
+        Audio.playWavResource("misc/init.wav");
+        
+        Audio.playLoopMp3Resource("misc/background_music.mp3");
+        
+        Logger.getLogger(Init.class.getName()).log(Level.INFO, "Loading INIT WINDOW...");
+        
+        Helpers.GUIRun(() -> {
+            VENTANA_INICIO = new Init();
+            
+            VENTANA_INICIO.setExtendedState(JFrame.MAXIMIZED_BOTH);
+            
+            VENTANA_INICIO.setVisible(true);
+        });
+        
+        Helpers.GUIRun(() -> {
+            // Create a borderless window for the splash screen
+            javax.swing.JWindow splash = new javax.swing.JWindow();
+
+            // Load the logo (adjust the path to match your resources)
+            java.net.URL logoUrl = Init.class.getResource("/images/panoptes_logo.jpg");
+            
+            if (logoUrl != null) {
+                splash.getContentPane().add(new javax.swing.JLabel(new javax.swing.ImageIcon(logoUrl)));
+            }
+
+            // Setup and display the splash screen
+            splash.pack();
+            splash.setLocationRelativeTo(null);
+            splash.setAlwaysOnTop(true);
+            splash.setVisible(true);
+
+            // Execute the heavy JNI initialization in a background thread
+            Helpers.threadRun(() -> {
+                try {
+                    Panoptes.WAKEUP_PANOPTES();
+                } finally {
+                    
+                    try {
+                        Thread.sleep(500);
+                    } catch (InterruptedException ex) {
+                        System.getLogger(Init.class.getName()).log(System.Logger.Level.ERROR, (String) null, ex);
+                    }
+
+                    // Once finished, safely destroy the splash screen on the GUI thread
+                    Helpers.GUIRun(() -> {
+                        splash.setVisible(false);
+                        splash.dispose();
+                    });
+                }
+            });
+        });
+        
+        if (PEGI18_MOD && !Files.isReadable(Paths.get(Helpers.getCurrentJarParentPath() + "/mod/.pegi18_warning"))) {
+            
+            if (Helpers.mostrarMensajeInformativoSINO(VENTANA_INICIO, "EL MOD CARGADO CONTIENE MATERIAL CALIFICADO SÓLO PARA MAYORES DE 18 AÑOS. ¿Continuar?", new ImageIcon(Init.class.getResource("/images/pegi18.png"))) == 0) {
+                try {
+                    Files.createFile(Paths.get(Helpers.getCurrentJarParentPath() + "/mod/.pegi18_warning"));
+                } catch (IOException ex) {
+                    Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
+                }
+            } else {
+                
+                System.exit(0);
+            }
+        }
+        
+        Logger.getLogger(Init.class.getName()).log(Level.INFO, "CHECKING UPDATE...");
+        
+        UPDATE();
+        
+        if (!Helpers.OSValidator.isMac()) {
+            antiScreensaver();
+        }
+        
+        Logger.getLogger(Init.class.getName()).log(Level.INFO, "LET'S GO");
+        
     }
-
+    
     private static void UPDATE() {
-
+        
         Helpers.threadRun(() -> {
             Helpers.GUIRun(() -> {
                 VENTANA_INICIO.action_buttons_panel.setEnabled(false);
@@ -1221,32 +1335,32 @@ public class Init extends JFrame {
                             VENTANA_INICIO.update_label.setText(Translator.translate("PREPARANDO ACTUALIZACIÓN..."));
                         });
                         try {
-
+                            
                             String current_jar_path = Helpers.getCurrentJarPath();
-
+                            
                             String new_jar_path = current_jar_path.replaceAll(AboutDialog.VERSION + ".jar", NEW_VERSION + ".jar");
-
+                            
                             String updater_jar = Helpers.downloadUpdater();
-
+                            
                             if (updater_jar != null) {
-
+                                
                                 Helpers.cleanCacheDIR();
-
+                                
                                 if (GameFrame.LANGUAGE.equals("es")) {
                                     String[] cmdArr = {Helpers.getJavaBinPath(), "-jar", updater_jar, NEW_VERSION, current_jar_path, new_jar_path, "¡Santiago y cierra, España!"};
-
+                                    
                                     Runtime.getRuntime().exec(cmdArr);
                                 } else {
                                     String[] cmdArr = {Helpers.getJavaBinPath(), "-jar", updater_jar, NEW_VERSION, current_jar_path, new_jar_path};
-
+                                    
                                     Runtime.getRuntime().exec(cmdArr);
                                 }
-
+                                
                                 System.exit(0);
                             } else {
                                 Helpers.mostrarMensajeError(VENTANA_INICIO, "NO SE HA PODIDO ACTUALIZAR (ERROR AL DESCARGAR EL ACTUALIZADOR)");
                             }
-
+                            
                         } catch (Exception ex) {
                             Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
                             Helpers.mostrarMensajeError(VENTANA_INICIO, "NO SE HA PODIDO ACTUALIZAR (ERROR INESPERADO)");
@@ -1260,38 +1374,38 @@ public class Init extends JFrame {
             }
             Helpers.GUIRun(() -> {
                 VENTANA_INICIO.update_label.setVisible(false);
-
+                
                 if (NEW_VERSION == null || !NEW_VERSION.isBlank()) {
                     VENTANA_INICIO.update_button.setVisible(true);
                 }
-
+                
                 VENTANA_INICIO.action_buttons_panel.setEnabled(true);
             });
         });
-
+        
     }
-
+    
     private static void antiScreensaver() {
-
+        
         java.util.Timer screensaver = new java.util.Timer();
-
+        
         screensaver.schedule(new TimerTask() {
             @Override
             public void run() {
                 if (GameFrame.getInstance() != null && GameFrame.getInstance().isFull_screen()) {
-
+                    
                     try {
-
+                        
                         Point mouseLoc = MouseInfo.getPointerInfo().getLocation();
                         Robot rob = new Robot();
                         rob.mouseMove(mouseLoc.x, mouseLoc.y);
-
+                        
                     } catch (AWTException ex) {
                         Logger.getLogger(Init.class.getName()).log(Level.SEVERE, null, ex);
                     }
                 }
             }
-
+            
         }, ANTI_SCREENSAVER_DELAY, ANTI_SCREENSAVER_DELAY);
     }
 
